pocetni ekran i iscrtavanje jednog objekta u petlji igre

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">BasicApp</string>
+    <string name="najbolji_rezultat">Najbolji rezultat:10 000</string>
 </resources>
